menus créer front

--- a/WebApplication1/WebApplication1/Front/menu-agences.html
+++ b/WebApplication1/WebApplication1/Front/menu-agences.html
@@ -58,8 +58,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <!--ADD HYPERTEXT WHEN AVAILABLE-->
-                    <a href="#" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:85%; position: center" alt="Logo"></a>
+                    <a href="http://localhost:63574/Front/creer-agence.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:85%; position: center" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Créer Agence</div>
                 </div>
             </div>
