--- a/WebApplication1/WebApplication1/Front/creer-client.html
+++ b/WebApplication1/WebApplication1/Front/creer-client.html
@@ -1,113 +1,102 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <title>BoVoyageCreerVoyageur</title>
     <meta charset="utf-8" />
-    <title></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+        .jumbotron {
+            margin-bottom: 10%;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
+
+    <div class="jumbotron">
+        <div class="container text-center">
+            <h1 style="color: chocolate">BoVoyage</h1>
             <div class="col-md-12">
-                <h2>Créer un client</h2>
-                <form class="form-horizontal" role="form">
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Sexe</label>
-                        <div class="col-sm-10">
-                            <select class="form-control" id="inputSexe"></select>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Nom</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputNom">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Prénom</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputPrenom">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Age</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputAge">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Date de naissance</label>
-                        <div class="col-sm-10">
-                            <input type="date" class="form-control" id="inputDateNaissance">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Adresse</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputAdresse">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Téléphone</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputTelephone">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Adresse Email</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="inputEmail">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">Enregistrer</button>
-                        </div>
-                    </div>
-                </form>
+                <p style="color: mediumturquoise">Créer un voyageur</p>
             </div>
         </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Sexe</label>
+            <div class="col-sm-10">
+                <select class="form-control" id="inputSexe"></select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Nom</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputNom">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Prénom</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputPrenom">
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" id="inputClient">Est Client
+                    </label>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Age</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputAge">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Date de naissance</label>
+            <div class="col-sm-10">
+                <input type="date" class="form-control" id="inputDateNaissance">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Adresse</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputAdresse">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Téléphone</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputTelephone">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Adresse Email</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputEmail">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Enregistrer</button>
+            </div>
+        </div>
+
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $.get("", function (data) {
-                //console.log(data);
-                for (let item of data) {
-                    $("#inputCategoryID").append(`<option value="${item.ID}">${item.Name}</option>`)
-                }
-            });
-            $("form").submit(function (ev) {
-                let obj = {
-                    Nom: $("#inputNom").val(),
-                    Prénom: $("#inputPrenom").val(),                    
-                };
-                //console.log(obj);
-
-                $.ajax({
-                    url: 'http://localhost:63757/api/todos',
-                    method: 'POST',
-                    data: obj,
-                    success: function (data) {
-                        alert(`Todo enregistré avec l'ID ${data.ID}`);
-                    }
-                });
-                ev.preventDefault();
-            });
-        });
-    </script>
 </body>
 </html>
