--- a/WebApplication1/WebApplication1/Front/creer-destination.html
+++ b/WebApplication1/WebApplication1/Front/creer-destination.html
@@ -1,10 +1,95 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <title>BoVoyageCreerDestination</title>
     <meta charset="utf-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+        .jumbotron {
+            margin-bottom: 10%;
+        }
+    </style>
 </head>
 <body>
 
+    <div class="jumbotron">
+        <div class="container text-center">
+            <h1 style="color: chocolate">BoVoyage</h1>
+            <div class="col-md-12">
+                <p style="color: mediumturquoise">Créer une destination</p>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Continent</label>
+                <div class="col-sm-10">
+                    <select class="form-control" id="inputContinent"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Pays</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputPays">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Region</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputRegion">
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Description</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputDescription">
+                </div>
+            </div>
+
+
+
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Enregistrer</button>
+                </div>
+            </div>
+        </div>
+        </div>
+
+
+   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+                crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+        <script>
+              
+                $("form").submit(function (ev) {
+                    let obj = {
+                        Continent: $("#inputContinent").val(),
+                        Pays: $("#inputPays").val(),
+                        Region: $("#inputRegion").val(),
+                        Description: $("#inputDescription").val(),
+                    };
+                    //console.log(obj);
+
+                    $.ajax({
+                        url: 'http:///localhost:63574/api/destination',
+                        method: 'POST',
+                        data: obj,
+                        success: function (data) {
+                            alert(`Destination enregistrée avec l'ID ${data.ID}`);
+                        }
+                    });
+                    ev.preventDefault();
+                });
+
+        </script>
 </body>
 </html>
