--- a/WebApplication1/WebApplication1/Front/creer-agence.html
+++ b/WebApplication1/WebApplication1/Front/creer-agence.html
@@ -23,20 +23,46 @@
                 <p style="color: mediumturquoise">Créer une agence</p>
             </div>
         </div>
- 
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Nom</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputNom">
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-default">Enregistrer</button>
-                            </div>
-                        </div>
-                        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Nom</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputNom">
+            </div>
+        </div>
 
-    </body>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Enregistrer</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script>
+
+        $("form").submit(function (ev) {
+            let obj = {
+                NomAgence: $("#inputNomAgence").val(),
+            };
+            //console.log(obj);
+
+            $.ajax({
+                url: 'http:///localhost:63574/api/agencevoyages',
+                method: 'POST',
+                data: obj,
+                success: function (data) {
+                    alert(`Agence enregistrée avec l'ID ${data.ID}`);
+                }
+            });
+            ev.preventDefault();
+        });
+
+    </script>
+
+
+</body>
 </html>
