--- a/WebApplication1/WebApplication1/Front/creer-client.html
+++ b/WebApplication1/WebApplication1/Front/creer-client.html
@@ -8,12 +8,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
+        .navbar {
+            margin-bottom: 50px;
+            border-radius: 0;
+        }
         .jumbotron {
-            margin-bottom: 10%;
+            margin-bottom: 0;
         }
     </style>
 </head>
 <body>
+
 
     <div class="jumbotron">
         <div class="container text-center">
@@ -22,81 +27,103 @@
                 <p style="color: mediumturquoise">Créer un voyageur</p>
             </div>
         </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Sexe</label>
-            <div class="col-sm-10">
-                <select class="form-control" id="inputSexe"></select>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Nom</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputNom">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Prénom</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputPrenom">
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" id="inputClient">Est Client
-                    </label>
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Age</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputAge">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Date de naissance</label>
-            <div class="col-sm-10">
-                <input type="date" class="form-control" id="inputDateNaissance">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Adresse</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputAdresse">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Téléphone</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputTelephone">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Adresse Email</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputEmail">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Enregistrer</button>
-            </div>
-        </div>
-
     </div>
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="http://localhost:63574/Front/home.html">Home</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="http://localhost:63574/Front/menu-voyageurs.html">Voyageurs</a></li>
+                    <li><a href="#">Consulter</a></li>
+                    <li><a href="#">Consulter</a></li>
+                    <li><a href="#">Consulter</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Sexe</label>
+        <div class="col-sm-10">
+            <select class="form-control" id="inputSexe"></select>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Nom</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputNom">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Prénom</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputPrenom">
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="inputClient">Est Client
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Age</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputAge">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Date de naissance</label>
+        <div class="col-sm-10">
+            <input type="date" class="form-control" id="inputDateNaissance">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Adresse</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputAdresse">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Téléphone</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputTelephone">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Adresse Email</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputEmail">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Enregistrer</button>
+        </div>
+    </div>
+
+
 
 </body>
 </html>
