--- a/WebApplication1/WebApplication1/Front/creer-destination.html
+++ b/WebApplication1/WebApplication1/Front/creer-destination.html
@@ -8,8 +8,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
+        .navbar {
+            margin-bottom: 50px;
+            border-radius: 0;
+        }
         .jumbotron {
-            margin-bottom: 10%;
+            margin-bottom: 0%;
         }
     </style>
 </head>
@@ -22,74 +26,96 @@
                 <p style="color: mediumturquoise">Créer une destination</p>
             </div>
         </div>
+    </div>
 
-        <div class="container">
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Continent</label>
-                <div class="col-sm-10">
-                    <select class="form-control" id="inputContinent"></select>
-                </div>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="http://localhost:63574/Front/home.html">Home</a>
             </div>
-
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Pays</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputPays">
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Region</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputRegion">
-                </div>
-            </div>
-
-
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Description</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputDescription">
-                </div>
-            </div>
-
-
-
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button type="submit" class="btn btn-default">Enregistrer</button>
-                </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="http://localhost:63574/Front/menu-destinations.html">Destinations</a></li>
+                    <li><a href="#">Consulter</a></li>
+                    <li><a href="#">Consulter</a></li>
+                    <li><a href="#">Consulter</a></li>
+                </ul>
             </div>
         </div>
+    </nav>
+
+    <div class="container">
+        <div class="form-group" style="margin-bottom: 5%">
+            <label class="col-sm-2 control-label">Continent</label>
+            <div class="col-sm-10">
+                <select class="form-control" id="inputContinent"></select>
+            </div>
+        </div>
+
+        <div class="form-group" style="margin-bottom: 10%">
+            <label class="col-sm-2 control-label">Pays</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputPays">
+            </div>
+        </div>
+
+        <div class="form-group" style="margin-bottom: 15%">
+            <label class="col-sm-2 control-label">Region</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputRegion">
+            </div>
         </div>
 
 
-   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-                crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-        <script>
-              
-                $("form").submit(function (ev) {
-                    let obj = {
-                        Continent: $("#inputContinent").val(),
-                        Pays: $("#inputPays").val(),
-                        Region: $("#inputRegion").val(),
-                        Description: $("#inputDescription").val(),
-                    };
-                    //console.log(obj);
+        <div class="form-group" style="margin-bottom: 20%">
+            <label class="col-sm-2 control-label">Description</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="inputDescription">
+            </div>
+        </div>
 
-                    $.ajax({
-                        url: 'http:///localhost:63574/api/destination',
-                        method: 'POST',
-                        data: obj,
-                        success: function (data) {
-                            alert(`Destination enregistrée avec l'ID ${data.ID}`);
-                        }
-                    });
-                    ev.preventDefault();
-                });
 
-        </script>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default">Enregistrer</button>
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script>
+
+        $("form").submit(function (ev) {
+            let obj = {
+                Continent: $("#inputContinent").val(),
+                Pays: $("#inputPays").val(),
+                Region: $("#inputRegion").val(),
+                Description: $("#inputDescription").val(),
+            };
+            //console.log(obj);
+
+            $.ajax({
+                url: 'http:///localhost:63574/api/destination',
+                method: 'POST',
+                data: obj,
+                success: function (data) {
+                    alert(`Destination enregistrée avec l'ID ${data.ID}`);
+                }
+            });
+            ev.preventDefault();
+        });
+
+    </script>
 </body>
 </html>
