--- a/WebApplication1/WebApplication1/Front/creer-dossier.html
+++ b/WebApplication1/WebApplication1/Front/creer-dossier.html
@@ -1,10 +1,106 @@
 ﻿<!DOCTYPE html>
+
+<!--MARCHE PAS ???-->
+
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <title>BoVoyageCreerDossier</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+        .navbar {
+            margin-bottom: 50px;
+            border-radius: 0;
+        }
+
+        .jumbotron {
+            margin-bottom: 0;
+        }
+    </style>
 </head>
 <body>
+
+    <div class="jumbotron">
+        <div class="container text-center">
+            <h1 style="color: chocolate">BoVoyage</h1>
+            <div class="col-md-12">
+                <p style="color: mediumturquoise">Créer un dossier</p>
+            </div>
+        </div>
+    </div>
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="http://localhost:63574/Front/home.html">Home</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="http://localhost:63574/Front/menu-dossier.html">Dossier</a></li>
+                    <li><a href="#">Consulter</a></li>
+                    <li><a href="#">Consulter</a></li>
+                    <li><a href="#">Consulter</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Client</label>
+        <div class="col-sm-10">
+            <select class="form-control" id="inputIdClient"></select>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Voyage</label>
+        <div class="col-sm-10">
+            <select class="form-control" id="inputIdVoyage"></select>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Nombre participants</label>
+        <div class="col-sm-4">
+            <input type="number" class="form-control" id="inputNbParticipant">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Etat dossier</label>
+        <div class="col-sm-4">
+            <select class="form-control" id="inputEtatDossierReservation"></select>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Prix Total</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="inputPrix">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label">Assurance</label>
+        <div class="col-sm-10">
+            <label type="checkbox" id="inputAssurance"></label>
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default">Enregistrer</button>
+        </div>
+    </div>
 
 </body>
 </html>
