--- a/WebApplication1/WebApplication1/Front/creer-agence.html
+++ b/WebApplication1/WebApplication1/Front/creer-agence.html
@@ -11,7 +11,6 @@
         .jumbotron {
             margin-bottom: 10%;
         }
-
     </style>
 </head>
 <body>
@@ -23,20 +22,47 @@
                 <p style="color: mediumturquoise">Créer une agence</p>
             </div>
         </div>
- 
-                        <div class="form-group">
-                            <label class="col-sm-2 control-label">Nom</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="inputNom">
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-default">Enregistrer</button>
-                            </div>
-                        </div>
-                        </div>
+        <form class="form-horizontal" role="form">
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Nom</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputNom">
+                </div>
+            </div>
 
-    </body>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Enregistrer</button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <ul id="resultat"></ul>
+            </div>
+        </form>
+    </div>
+
+    <script>
+        $(document).ready(function () {
+            $("form").submit(function (ev) {
+
+                $.ajax({
+                    url: "http://localhost:63574/api/agencevoyages/" + $("#inputNom").val(),
+                    method: 'POST',
+                    success: function (data) {
+                        let ul = $('#resultat');
+                        for (let item of data) {
+                            ul.append(`<li>${item.Name}</li>`);
+                        }
+                    },
+                    error: function (message) {
+                        alert(message);
+                    }
+                });
+                ev.preventDefault();
+            })
+        });
+    </script>
+
+</body>
 </html>
