--- a/WebApplication1/WebApplication1/Front/Assurance/menu-assurances.html
+++ b/WebApplication1/WebApplication1/Front/Assurance/menu-assurances.html
@@ -44,11 +44,11 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/home.html">Home</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyageurs.html">Voyageurs</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyages.html">Voyages</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-destinations.html">Destinations</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-dossiers.html">Dossiers</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-agences.html">Agences</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/menu-voyageurs.html">Voyageurs</a></li>
+                    <li><a href="http://localhost:63574/Front/Voyage/menu-voyages.html">Voyages</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
+                    <li><a href="http://localhost:63574/Front/Dossier/menu-dossiers.html">Dossiers</a></li>
+                    <li><a href="http://localhost:63574/Front/Agence/menu-agences.html">Agences</a></li>
                 </ul>
             </div>
         </div>
@@ -59,8 +59,8 @@
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <!--ADD HYPERTEXT WHEN AVAILABLE-->
-                    <a href="#" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:85%; position: center" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Créer Assurance</div>
+                    <a href="#" div class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:80%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Assurances disponibles</div>
                 </div>
             </div>
         </div>
