--- a/WebApplication1/WebApplication1/Front/Destination/menu-destinations.html
+++ b/WebApplication1/WebApplication1/Front/Destination/menu-destinations.html
@@ -1,34 +1,25 @@
 ﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>BoVoyageMenuVoyages</title>
+    <title>BoVoyageMenuDestinations</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
-        .navbar {
-            margin-bottom: 50px;
-            border-radius: 0;
-        }
-
         .jumbotron {
             margin-bottom: 0;
         }
 
-        footer {
-            background-color: #f2f2f2;
-            padding: 25px;
-        }
     </style>
 </head>
 <body>
 
     <div class="jumbotron">
         <div class="container text-center">
-            <h1 style="color: chocolate" >BoVoyage</h1>
-            <p style="color: mediumturquoise">Gestion des voyages</p>
+            <h1 style="color: chocolate">BoVoyage</h1>
+            <p style="color: mediumturquoise">Gestion des destinations</p>
         </div>
     </div>
 
@@ -44,11 +35,11 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/home.html">Home</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyageurs.html">Voyageurs</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-destinations.html">Destinations</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-dossiers.html">Dossiers</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-agences.html">Agences</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-assurances.html">Assurances</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/menu-voyageurs.html">Voyageurs</a></li>
+                    <li><a href="http://localhost:63574/Front/Voyage/menu-voyages.html">Voyages</a></li>
+                    <li><a href="http://localhost:63574/Front/Dossier/menu-dossiers.html">Dossiers</a></li>
+                    <li><a href="http://localhost:63574/Front/Agence/menu-agences.html">Agences</a></li>
+                    <li><a href="http://localhost:63574/Front/Assurance/menu-assurances.html">Assurances</a></li>
                 </ul>
             </div>
         </div>
@@ -58,8 +49,8 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/creer-voyage.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:85%; position: center" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Créer Voyage</div>
+                    <a href="http://localhost:63574/Front/Destination/creer-destination.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:100%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Créer Destination</div>
                 </div>
             </div>
         </div>
