--- a/WebApplication1/WebApplication1/Front/Dossier/menu-dossiers.html
+++ b/WebApplication1/WebApplication1/Front/Dossier/menu-dossiers.html
@@ -44,11 +44,11 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/home.html">Home</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyageurs.html">Voyageurs</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyages.html">Voyages</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-destinations.html">Destinations</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-agences.html">Agences</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-assurances.html">Assurances</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/menu-voyageurs.html">Voyageurs</a></li>
+                    <li><a href="http://localhost:63574/Front/Voyage/menu-voyages.html">Voyages</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
+                    <li><a href="http://localhost:63574/Front/Agence/menu-agences.html">Agences</a></li>
+                    <li><a href="http://localhost:63574/Front/Assurance/menu-assurances.html">Assurances</a></li>
                 </ul>
             </div>
         </div>
@@ -58,7 +58,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/creer-dossier.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:85%; position: center" alt="Logo"></a>
+                    <a href="http://localhost:63574/Front/Dossier/creer-dossier.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:80%; padding-left: 70px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Créer Dossier</div>
                 </div>
             </div>
