--- a/WebApplication1/WebApplication1/Front/Voyage/menu-voyages.html
+++ b/WebApplication1/WebApplication1/Front/Voyage/menu-voyages.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>BoVoyageMenuVoyageurs</title>
+    <title>BoVoyageMenuVoyages</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -27,8 +27,8 @@
 
     <div class="jumbotron">
         <div class="container text-center">
-            <h1 style="color: chocolate">BoVoyage</h1>
-            <p style="color: mediumturquoise">Gestion des voyageurs</p>
+            <h1 style="color: chocolate" >BoVoyage</h1>
+            <p style="color: mediumturquoise">Gestion des voyages</p>
         </div>
     </div>
 
@@ -44,22 +44,22 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/home.html">Home</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyages.html">Voyages</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-destinations.html">Destinations</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-dossiers.html">Dossiers</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-agences.html">Agences</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-assurances.html">Assurances</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/menu-voyageurs.html">Voyageurs</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
+                    <li><a href="http://localhost:63574/Front/Dossier/menu-dossiers.html">Dossiers</a></li>
+                    <li><a href="http://localhost:63574/Front/Agence/menu-agences.html">Agences</a></li>
+                    <li><a href="http://localhost:63574/Front/Assurance/menu-assurances.html">Assurances</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    
+
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/creer-client.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:85%; position: center" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Créer Voyageur</div>
+                    <a href="http://localhost:63574/Front/Voyage/creer-voyage.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:80%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Créer Voyage</div>
                 </div>
             </div>
         </div>
