--- a/WebApplication1/WebApplication1/Front/home.html
+++ b/WebApplication1/WebApplication1/Front/home.html
@@ -37,20 +37,20 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/menu-voyageurs.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:80%" alt="Logo"></a>
-                    <div class="panel-footer">Gestion des Voyageurs</div>
+                    <a href="http://localhost:63574/Front/Client/menu-voyageurs.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Gestion des Voyageurs</div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/menu-voyages.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:80%" alt="Logo"></a>
-                    <div class="panel-footer">Gestion des Voyages</div>
+                    <a href="http://localhost:63574/Front/Voyage/menu-voyages.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Gestion des Voyages</div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/menu-destinations.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:80%" alt="Logo"></a>
-                    <div class="panel-footer">Gestion des Destinations</div>
+                    <a href="http://localhost:63574/Front/Destination/menu-destinations.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Gestion des Destinations</div>
                 </div>
             </div>
         </div>
@@ -60,20 +60,20 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/menu-dossiers.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:80%" alt="Logo"></a>
-                    <div class="panel-footer">Gestion des Dossiers de reservation</div>
+                    <a href="http://localhost:63574/Front/Dossier/menu-dossiers.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Gestion des Dossiers de reservation</div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/menu-agences.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:80%" alt="Logo"></a>
-                    <div class="panel-footer">Gestion des Agences de voyage</div>
+                    <a href="http://localhost:63574/Front/Agence/menu-agences.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Gestion des Agences de voyage</div>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a  href="http://localhost:63574/Front/menu-assurances.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:80%" alt="Logo"></a>
-                    <div class="panel-footer">Gestion des Assurances</div>
+                    <a  href="http://localhost:63574/Front/Assurance/menu-assurances.html" class="panel-body"><img src="planetblue.png" class="img-responsive" style="width:60%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Gestion des Assurances</div>
                 </div>
             </div>
         </div>
