--- a/WebApplication1/WebApplication1/Front/Agence/menu-agences.html
+++ b/WebApplication1/WebApplication1/Front/Agence/menu-agences.html
@@ -44,11 +44,11 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/home.html">Home</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyageurs.html">Voyageurs</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyages.html">Voyages</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-destinations.html">Destinations</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-dossiers.html">Dossiers</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-assurances.html">Assurances</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/menu-voyageurs.html">Voyageurs</a></li>
+                    <li><a href="http://localhost:63574/Front/Voyage/menu-voyages.html">Voyages</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
+                    <li><a href="http://localhost:63574/Front/Dossier/menu-dossiers.html">Dossiers</a></li>
+                    <li><a href="http://localhost:63574/Front/Assurance/menu-assurances.html">Assurances</a></li>
                 </ul>
             </div>
         </div>
@@ -58,8 +58,14 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/creer-agence.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:85%; position: center" alt="Logo"></a>
+                    <a href="http://localhost:63574/Front/Agence/creer-agence.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
                     <div class="panel-footer" style="text-align:center">Créer Agence</div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Agence/lister-agences.html" class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Lister les agences</div>
                 </div>
             </div>
         </div>
