--- a/WebApplication1/WebApplication1/Front/Client/menu-voyageurs.html
+++ b/WebApplication1/WebApplication1/Front/Client/menu-voyageurs.html
@@ -1,17 +1,26 @@
 ﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>BoVoyageMenuDestinations</title>
+    <title>BoVoyageMenuVoyageurs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
+        .navbar {
+            margin-bottom: 50px;
+            border-radius: 0;
+        }
+
         .jumbotron {
             margin-bottom: 0;
         }
 
+        footer {
+            background-color: #f2f2f2;
+            padding: 25px;
+        }
     </style>
 </head>
 <body>
@@ -19,7 +28,7 @@
     <div class="jumbotron">
         <div class="container text-center">
             <h1 style="color: chocolate">BoVoyage</h1>
-            <p style="color: mediumturquoise">Gestion des destinations</p>
+            <p style="color: mediumturquoise">Gestion des voyageurs</p>
         </div>
     </div>
 
@@ -35,22 +44,22 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/home.html">Home</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyageurs.html">Voyageurs</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-voyages.html">Voyages</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-dossiers.html">Dossiers</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-agences.html">Agences</a></li>
-                    <li><a href="http://localhost:63574/Front/menu-assurances.html">Assurances</a></li>
+                    <li><a href="http://localhost:63574/Front/Voyages/menu-voyages.html">Voyages</a></li>
+                    <li><a href="http://localhost:63574/Front/Destination/menu-destinations.html">Destinations</a></li>
+                    <li><a href="http://localhost:63574/Front/Dossiers/menu-dossiers.html">Dossiers</a></li>
+                    <li><a href="http://localhost:63574/Front/Agence/menu-agences.html">Agences</a></li>
+                    <li><a href="http://localhost:63574/Front/Assurance/menu-assurances.html">Assurances</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-
+    
     <div class="container">
         <div class="row">
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/creer-destination.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:85%; position: center" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Créer Destination</div>
+                    <a href="http://localhost:63574/Front/Client/creer-client.html" div class="panel-body"><img src="AddSign.jpg" class="img-responsive" style="width:80%; padding-left: 70px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Créer Voyageur</div>
                 </div>
             </div>
         </div>
