--- a/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
+++ b/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
@@ -12,6 +12,7 @@
             margin-bottom: 50px;
             border-radius: 0;
         }
+
         .jumbotron {
             margin-bottom: 0%;
         }
@@ -50,72 +51,77 @@
     </nav>
 
     <div class="container">
-        <div class="form-group" style="margin-bottom: 5%">
-            <label class="col-sm-2 control-label">Continent</label>
-            <div class="col-sm-10">
-                <select class="form-control" id="inputContinent"></select>
+        <form class="form-horizontal" role="form">
+            <div class="form-group" style="margin-bottom: 5%">
+                <label class="col-sm-2 control-label">Continent</label>
+                <div class="col-sm-10">
+                    <input type="text" id="inputContinent">
+                </div>
             </div>
-        </div>
 
-        <div class="form-group" style="margin-bottom: 10%">
-            <label class="col-sm-2 control-label">Pays</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputPays">
+            <div class="form-group" style="margin-bottom: 10%">
+                <label class="col-sm-2 control-label">Pays</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputPays">
+                </div>
             </div>
-        </div>
 
-        <div class="form-group" style="margin-bottom: 15%">
-            <label class="col-sm-2 control-label">Region</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputRegion">
+            <div class="form-group" style="margin-bottom: 15%">
+                <label class="col-sm-2 control-label">Region</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputRegion">
+                </div>
             </div>
-        </div>
 
 
-        <div class="form-group" style="margin-bottom: 20%">
-            <label class="col-sm-2 control-label">Description</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="inputDescription">
+            <div class="form-group" style="margin-bottom: 20%">
+                <label class="col-sm-2 control-label">Description</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputDescription">
+                </div>
             </div>
-        </div>
 
 
 
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Enregistrer</button>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Enregistrer</button>
+                </div>
             </div>
-        </div>
+        </form>
     </div>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script>
+        $(document).ready(function () {
 
-        $("form").submit(function (ev) {
-            let obj = {
-                Continent: $("#inputContinent").val(),
-                Pays: $("#inputPays").val(),
-                Region: $("#inputRegion").val(),
-                Description: $("#inputDescription").val(),
-            };
-            //console.log(obj);
+           
+            $("form").submit(function (ev) {
+                let obj = {
+                    Continent: $("#inputContinent").val(),
+                    Pays: $("#inputPays").val(),
+                    Region: $("#inputRegion").val(),
+                    Description: $("#inputDescription").val(),
+                };
 
-            $.ajax({
-                url: 'http:///localhost:63574/api/destination',
-                method: 'POST',
-                data: obj,
-                success: function (data) {
-                    alert(`Destination enregistrée avec l'ID ${data.ID}`);
-                }
+                $.ajax({
+                    url: "http://localhost:63574/api/destinations/",
+                    method: 'POST',
+                    data: obj,
+                    success: function (data) {
+
+                        alert(`Destination enregistrée avec l'ID ${data.ID}`);
+                    }
+
+
+                });
+                    ev.preventDefault();
+
+
+
             });
-            ev.preventDefault();
         });
-
     </script>
 </body>
 </html>
