--- a/WebApplication1/WebApplication1/Front/Dossier/creer-dossier.html
+++ b/WebApplication1/WebApplication1/Front/Dossier/creer-dossier.html
@@ -53,54 +53,92 @@
         </div>
     </nav>
 
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Client</label>
-        <div class="col-sm-10">
-            <select class="form-control" id="inputIdClient"></select>
-        </div>
+    <div class="container">
+        <form class="form-horizontal" role="form">
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Client</label>
+                <div class="col-sm-10">
+                    <select class="form-control" id="inputIdClient"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Voyage</label>
+                <div class="col-sm-10">
+                    <select class="form-control" id="inputIdVoyage"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Nombre participants</label>
+                <div class="col-sm-4">
+                    <input type="number" class="form-control" id="inputNbParticipant">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Etat dossier</label>
+                <div class="col-sm-4">
+                    <select class="form-control" id="inputEtatDossierReservation"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Prix Total</label>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control" id="inputPrix">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Assurance</label>
+                <div class="col-sm-10">
+                    <label type="checkbox" id="inputAssurance"></label>
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Enregistrer</button>
+                </div>
+            </div>
+        </form>
     </div>
 
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Voyage</label>
-        <div class="col-sm-10">
-            <select class="form-control" id="inputIdVoyage"></select>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Nombre participants</label>
-        <div class="col-sm-4">
-            <input type="number" class="form-control" id="inputNbParticipant">
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Etat dossier</label>
-        <div class="col-sm-4">
-            <select class="form-control" id="inputEtatDossierReservation"></select>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Prix Total</label>
-        <div class="col-sm-10">
-            <input type="number" class="form-control" id="inputPrix">
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Assurance</label>
-        <div class="col-sm-10">
-            <label type="checkbox" id="inputAssurance"></label>
-        </div>
-    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function () {
 
 
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Enregistrer</button>
-        </div>
-    </div>
+            $("form").submit(function (ev) {
+                let obj = {
+                    //Client: $("#inputClient").val(),
+                    //Voyage: $("#inputVoyage").val(),
+                    NombreParticipants: $("#inputNbParticipant").val(),
+                    //EtatDossier: $("#inputEtatDossierReservation").val(),
+                    PrixTotal: $("#inputPrix").val(),
+                    //Assurance: $("#inputAssurance").val(),
+                };
+
+                $.ajax({
+                    url: "http://localhost:63574/api/DossierReservations/",
+                    method: 'POST',
+                    data: obj,
+                    success: function (data) {
+                        alert(`Dossier enregistré avec l'ID ${data.ID}`);
+                    }
+                });
+
+                ev.preventDefault();
+            });
+        });
+
+    </script>
+
 
 </body>
 </html>
