--- a/WebApplication1/WebApplication1/Front/Voyage/creer-voyage.html
+++ b/WebApplication1/WebApplication1/Front/Voyage/creer-voyage.html
@@ -50,53 +50,85 @@
         </div>
     </nav>
 
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Date Aller</label>
-        <div class="col-sm-4">
-            <input type="date" class="form-control" id="inputDateAller">
-        </div>
+    <div class="container">
+        <form class="form-horizontal" role="form">
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Date Aller</label>
+                <div class="col-sm-4">
+                    <input type="date" class="form-control" id="inputDateAller">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Date Retour</label>
+                <div class="col-sm-4">
+                    <input type="date" class="form-control" id="inputDateRetour">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Places disponibles</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputPlacesDisponibles">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Tarif tout compris</label>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control" id="inputTarif">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Destination</label>
+                <div class="col-sm-10">
+                    <select class="form-control" id="inputDestinationID"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Proposé par</label>
+                <div class="col-sm-10">
+                    <select class="form-control" id="inputAgenceID"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Enregistrer</button>
+                </div>
+            </div>
+        </form>
     </div>
 
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Date Retour</label>
-        <div class="col-sm-4">
-            <input type="date" class="form-control" id="inputDateRetour">
-        </div>
-    </div>
+    <script>
+        $(document).ready(function () {
 
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Places disponibles</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" id="inputPlacesDisponibles">
-        </div>
-    </div>
 
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Tarif tout compris</label>
-        <div class="col-sm-10">
-            <input type="number" class="form-control" id="inputTarif">
-        </div>
-    </div>
+            $("form").submit(function (ev) {
+                let obj = {
+                    DateAller: $("#inputDateAller").val(),
+                    DateAller: $("#inputDateRetour").val(),
+                    PlacesDiponbles: $("#inputPlacesDisponibles").val(),
+                    TarifToutCompris: $("#inputTarif").val(),
+                    PrixTotal: $("#inputPrix").val(),
+                };
 
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Destination</label>
-        <div class="col-sm-10">
-            <select class="form-control" id="inputDestinationID"></select>
-        </div>
-    </div>
+                $.ajax({
+                    url: "http://localhost:63574/api/Voyages/",
+                    method: 'POST',
+                    data: obj,
+                    success: function (data) {
+                        alert(`Voyage enregistré avec l'ID ${data.ID}`);
+                    }
+                });
 
-    <div class="form-group">
-        <label class="col-sm-2 control-label">Proposé par</label>
-        <div class="col-sm-10">
-            <select class="form-control" id="inputAgenceID"></select>
-        </div>
-    </div>
+                ev.preventDefault();
+            });
+        });
 
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Enregistrer</button>
-        </div>
-    </div>
+    </script>
 
 </body>
 </html>
