--- a/WebApplication1/WebApplication1/Front/Client/creer-client.html
+++ b/WebApplication1/WebApplication1/Front/Client/creer-client.html
@@ -151,7 +151,8 @@
                     method: 'POST',
                     data: obj,
                     success: function (data) {
-                        alert(`Client enregistré avec l'ID ${data.ID}`);
+                        alert(`Client enregistré avec succès`);
+                        //alert(`Client enregistré avec l'ID ${data.ID}`);
                     }
                 });
 
