--- a/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
+++ b/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
@@ -111,7 +111,7 @@
                     data: obj,
                     success: function (data) {
 
-                        alert(`Destination enregistrée avec l'ID ${data.ID}`);
+                        alert(`Destination enregistrée avec succès`);
                     }
 
 
