--- a/WebApplication1/WebApplication1/Front/Voyage/creer-voyage.html
+++ b/WebApplication1/WebApplication1/Front/Voyage/creer-voyage.html
@@ -120,7 +120,7 @@
                     method: 'POST',
                     data: obj,
                     success: function (data) {
-                        alert(`Voyage enregistré avec l'ID ${data.ID}`);
+                        alert(`Voyage enregistré avec succès`);
                     }
                 });
 
