--- a/WebApplication1/WebApplication1/Front/Agence/menu-agences.html
+++ b/WebApplication1/WebApplication1/Front/Agence/menu-agences.html
@@ -64,8 +64,14 @@
             </div>
             <div class="col-sm-4">
                 <div class="panel panel-primary">
-                    <a href="http://localhost:63574/Front/Agence/lister-agences.html" class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
-                    <div class="panel-footer" style="text-align:center">Lister les agences</div>
+                    <a href="http://localhost:63574/Front/Agence/afficher-agences.html" class="panel-body"><img src="ListSign.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Afficher les agences</div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="panel panel-primary">
+                    <a href="http://localhost:63574/Front/Agence/chercher-agence.html" class="panel-body"><img src="SearchLogo.jpg" class="img-responsive" style="width:70%; padding-left: 80px" alt="Logo"></a>
+                    <div class="panel-footer" style="text-align:center">Rechercher une agence</div>
                 </div>
             </div>
         </div>
