--- a/WebApplication1/WebApplication1/Front/Client/creer-client.html
+++ b/WebApplication1/WebApplication1/Front/Client/creer-client.html
@@ -42,9 +42,9 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="http://localhost:63574/Front/Client/menu-voyageurs.html">Voyageurs</a></li>
-                    <li><a href="#">Consulter</a></li>
-                    <li><a href="#">Consulter</a></li>
-                    <li><a href="#">Consulter</a></li>
+                    <li><a href="http://localhost:63574/Front/Client/afficher-clients.html">Afficher</a></li>
+                    <li><a href="#">Rechercher</a></li>
+                    <li><a href="#">Modifier</a></li>
                 </ul>
             </div>
         </div>
@@ -52,11 +52,14 @@
 
     <div class="container">
         <form class="form-horizontal" role="form">
+
             <div class="form-group">
-                <label class="col-sm-2 control-label">Sexe</label>
-                <div class="col-sm-10">
-                    <select class="form-control" id="inputSexe"></select>
-                </div>
+                <label for="sexe">Indiquez le sexe</label>
+                <select multiple class="form-control" id="inputSexe">
+                    <option>Femme</option>
+                    <option>Homme</option>
+                    <option>Autre</option>
+                </select>
             </div>
 
             <div class="form-group">
