--- a/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
+++ b/WebApplication1/WebApplication1/Front/Destination/creer-destination.html
@@ -53,10 +53,14 @@
     <div class="container">
         <form class="form-horizontal" role="form">
             <div class="form-group">
-                <label class="col-sm-2 control-label">Choisir le continent</label>
-                <div class="col-sm-10">
-                    <select class="form-control" id="inputContinent"></select>
-                </div>
+                <label for="continent">Choisissez le continent</label>
+                <select multiple class="form-control" id="inputContinent">
+                    <option>Afrique</option>
+                    <option>Asie</option>
+                    <option>Amérique</option>
+                    <option>Europe</option>
+                    <option>Océanie</option>
+                </select>
             </div>
 
             <div class="form-group" style="margin-bottom: 10%">
